feat: - added migrations - added models - added schemes

--- a/alembic.ini
+++ b/alembic.ini
@@ -2,6 +2,7 @@
 
 [alembic]
 script_location = ./app/db/migrations
+sqlalchemy.url = postgresql://postgres:password@db:5432/mydatabase
 
 [loggers]
 keys = root,sqlalchemy,alembic
