--- a/example.env
+++ b/example.env
@@ -13,7 +13,7 @@ POSTGRES_USER="postgres"
 POSTGRES_DB="postgres"
 DEV_DB_NAME=""
 
-POSTGRES_DSN=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@127.0.0.1:5432/${DEV_DB_NAME}
+POSTGRES_DSN=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${DEV_DB_NAME}
 SQL_DEBUG=false
 
 # Redis
