--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ psycopg2-binary = "*"
 loguru = "*"
 python-multipart = "^0.0.10"
 jinja2 = "^3.1.4"
+openpyxl = "^3.1.5"
 
 [tool.poetry.dev-dependencies]
 add-trailing-comma = "2.2.1"
